[project]
name = "sample-loc-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luke", email = "gregorl@ethz.ch" }
]
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.2.0",
    "folium>=0.19.4",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.0",
    "munch>=4.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "xarray>=2025.1.2",
]

[project.scripts]
sample-loc-map = "sample_loc_map:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
